--- a/public/angular/feature/login/view.html
+++ b/public/angular/feature/login/view.html
@@ -1,5 +1,8 @@
 <div class="text-center" style="padding: 50px 0; width: 300px">
     <div>
+        <div data-ng-show="errorMessage" class="unresolved" style="text-align: left; margin-bottom: 10px">
+            {{errorMessage}}
+        </div>
         <form class="text-left frm-login">
             <div>
                 <div class="login-group">
