--- a/public/angular/feature/login/view.html
+++ b/public/angular/feature/login/view.html
@@ -8,7 +8,7 @@
                 <div class="login-group">
                     <div class="form-group">
                         <label for="lg_username">Username</label>
-                        <input type="text" class="form-control" id="lg_username" data-ng-model="username">
+                        <input type="text" class="form-control" id="lg_username" data-ng-model="username" data-focus-on>
                     </div>
                     <div class="form-group">
                         <label for="lg_password">Password</label>
