--- a/public/angular/feature/f1/view.html
+++ b/public/angular/feature/f1/view.html
@@ -6,6 +6,7 @@
     <p>
         <button class="btn btn-default" data-ng-click="dispatchJob()">Dispatch my asynchronous job</button>
         <button class="btn btn-default" data-ng-disabled="disableSse" data-ng-click="initiateSse()">Initiate SSE</button>
+        <button class="btn btn-default" data-ng-click="sendEmail()">Send Email</button>
     </p>
     <div class="sse-panel">
         {{sseResponse}}
